--- a/app/views/specific_topics/_new.html.haml
+++ b/app/views/specific_topics/_new.html.haml
@@ -2,9 +2,9 @@
 #new-topic.new-entity.close-on-submit
   = semantic_form_for :topic, :remote => true, :url => specific_topic_path do |f| 
     = f.inputs do 
-      = f.input :name 
+      = f.input :name, :label => 'Specific Topic'
       = f.input :category, :label => 'Category', :as => :select, 
                            :collection => BroadTopic.all
-      = f.input :new_category, :hint => 'Create a new category if none of the above apply'
+      = f.input :new_category, :hint => 'Specify new category if none of the above apply'
     .submit-buttons
       %input{:type => :submit, :role => :button, :value => "Add", :name => "commit"}
