Reorganized/simplified #edit-syllabi-megatable ..
Previously, not all specific topics (of a broad topic) were listed
together under one column. This was visually confusing. So now, each
broad topic is laid out entirely in one column

The CSS is simpler. 'tweaks.css' is becoming slowly redundant

--- a/app/views/syllabi/_edit.html.haml
+++ b/app/views/syllabi/_edit.html.haml
@@ -27,17 +27,18 @@
 
     #dump
       - categories.each do |category| 
-        .headings 
-          .label.large.left.full-width= "#{category.name}"
-          = nofrills_checkbox :float => :right 
+        .broad-topic
+          .heading
+            .label.large.left.full-width= "#{category.name}"
+            = nofrills_checkbox :float => :right 
 
-        - topics = SpecificTopic.where(:broad_topic_id => category.id).order(:name)
-        - topics.each do |topic| 
-          %div{ :marker => "#{topic.id}" }
-            %div 
-              = nofrills_checkbox 
-              .label.small= "#{topic.name}"
-            = drop_down_menu_for :difficulty, :float => :right, :disabled => true,
-                                 :include_blank => false, :name => "syllabi[#{topic.id}]"
+          - topics = SpecificTopic.where(:broad_topic_id => category.id).order(:name) 
+          - topics.each do |topic| 
+            .specific-topic{ :marker => "#{topic.id}" }
+              .heading
+                = nofrills_checkbox 
+                .label.small= "#{topic.name}"
+              = drop_down_menu_for :difficulty, :float => :right, :disabled => true,
+                                   :include_blank => false, :name => "syllabi[#{topic.id}]"
     #first.column.left 
     #second.column.left
