--- a/app/assets/stylesheets/new-interface.css
+++ b/app/assets/stylesheets/new-interface.css
@@ -223,6 +223,32 @@ legend > a {
   margin-left : 17px ;
 } 
 
+#edit-syllabi-megaform .broad-topic > .heading { 
+  font-variant : small-caps ;
+  font-weight : bold ; 
+  font-size : 14px ;
+  background-color : #654b24 ;
+  color : white ;
+  padding-left : 10px ;
+  padding-top : 6px ;
+  min-height : 40px ;
+  -moz-border-radius : 2px ;
+  border-radius : 2px ;
+} 
+
+#edit-syllabi-megaform .broad-topic { 
+  margin-top : 5px ;
+} 
+
+#edit-syllabi-megaform .specific-topic { 
+  min-height : 45px ;
+  text-transform : lowercase ;
+} 
+
+#edit-syllabi-megaform .column { 
+  margin-right : 15px ;
+} 
+
 /*
 .headings .label.middle { 
   margin-left : 40% ;
