--- a/app/views/schools/_controls.html.haml
+++ b/app/views/schools/_controls.html.haml
@@ -4,7 +4,8 @@
     = minor_link :for => 'add-n-edit-school', :label => 'Add & Edit School', 
                  :with => {:panels => {:middle => '#new-school', :right => '#edit-school'} }
     = minor_link :for => 'edit-roster', :label => 'Faculty Roster', 
-                 :with => { :panels => { :middle => '#teachers-list', :right => '#studygroups-list'} }
+                 :with => { :panels => { :middle => '#teachers-list', :right => '#studygroups-list'}, 
+                            :radio_urls => { :side => 'teachers/list.json?id='} }
     = minor_link :for => 'new-studygroups', :label => 'New Sections',
                  :with => { :panels => { :middle => '#new-studygroups' } }
     = minor_link :for => 'edit-studygroups', :label => 'Edit Sections', 
