--- a/app/views/study_groups/_list.html.haml
+++ b/app/views/study_groups/_list.html.haml
@@ -10,7 +10,7 @@
 -# going to be a form submission, we first make the form
 
 #studygroups-list.multi-select.selection.full-width.left
-  = form_tag '/study_group', :method => :put, :remote => true do |f| 
+  = form_tag teachers_update_roster_path, :method => :put, :remote => true do |f| 
     = submit_tag "Update"
     .data.clear-before-show.empty-on-putback 
 
