On edit-studygroups-link click, load sections for selected school

--- a/app/views/study_groups/_radio_list.html.haml
+++ b/app/views/study_groups/_radio_list.html.haml
@@ -3,4 +3,4 @@
   %legend
     %span.target= "Sections"
     %span.operation= "Select One"
-  .data.empty-on-putback 
+  .data.clear-before-show.empty-on-putback 
