--- a/app/views/schools/_controls.html.haml
+++ b/app/views/schools/_controls.html.haml
@@ -10,7 +10,8 @@
     = minor_link :for => 'new-studygroups', :label => 'New Sections',
                  :with => { :panels => { :middle => '#new-studygroups' } }
     = minor_link :for => 'edit-studygroups', :label => 'Edit Sections', 
-                 :with => {:panels => {:middle => '#studygroups-radiolist', :right => '#student-list'} }
+                 :with => {:panels => {:middle => '#studygroups-radiolist', :right => '#student-list'},
+                           :radio_urls => {:side => 'school/sections.json?id='} }
 
   = form_tag schools_list_path, :method => :get, :remote => true, :class => 'right' do |f| 
     = drop_down_menu_for :states
