Initial commit of minor-controls for #examiner

--- a/app/views/layouts/admin.html.haml
+++ b/app/views/layouts/admin.html.haml
@@ -17,6 +17,7 @@
     = render :partial => 'courses/controls'
     = render :partial => 'schools/controls'
     = render :partial => 'specific_topics/controls'
+    = render :partial => 'examiners/controls'
 
     = render :partial => 'schools/admin-view'
     = render :partial => 'courses/summary'
