--- a/app/views/admin/_top-panel.html.haml
+++ b/app/views/admin/_top-panel.html.haml
@@ -1,7 +1,7 @@
 
 %ul.no-bullets
   = main_link :for => :schools, :with => {:panels => {:middle => "#new-student", :right => "#new-teacher"}} 
-  = main_link :for => :examiners, :with => {:panels => {:middle => '#new-examiner'}}
+  = main_link :for => :examiners, :with => {:panels => {} }
 
   = main_link :for => :courses, :with => {:panels => {:wide => "#edit-syllabi-megaform"},
                                           :radio_urls => {:side => 'course.json?id='} } 
