--- a/app/views/examiners/_new.html.haml
+++ b/app/views/examiners/_new.html.haml
@@ -1,8 +1,5 @@
 
-#new-examiner.clear-after-submit
-  %legend
-    %span.target= "examiner"
-    %span.operation= "Quick Add"
+#new-examiner.new-entity.close-on-submit
   = semantic_form_for :examiner, :remote => true, :url => examiner_path do |f|
     = f.inputs do
       = f.input :first_name
