--- a/app/views/layouts/admin.html.haml
+++ b/app/views/layouts/admin.html.haml
@@ -27,9 +27,11 @@
     = render :partial => 'study_groups/studentlist'
     = render :partial => 'study_groups/list'
     = render :partial => 'study_groups/radio_list'
+    = render :partial => 'specific_topics/list'
   
     = render :partial => 'toolbox/radio_one_column'
     = render :partial => 'toolbox/checkbox_one_column'
+    = render :partial => 'toolbox/line_item'
   
 !!!5
 
