Added <legend> to sub-sections in partial

--- a/app/views/specific_topics/_list.html.haml
+++ b/app/views/specific_topics/_list.html.haml
@@ -1,4 +1,10 @@
 
 #topic-list.sortable-containment
+  %legend
+    %span.target= "In"
+    %span.operation= "Click to exclude | Select to Edit"
   %ul#included-topics.data.sortable
+  %legend
+    %span.target= "Out"
+    %span.operation= "Click to include" 
   %ul#excluded-topics.data.sortable
