Renamed specific_topic -> micro_topic AND broad_topic -> macro_topic
Never liked the original names. And so, thought it better to change them
before writing anymore code with the rubbish names

The new names also better suggest the difference between macro and micro
topics. Its easier, therefore, to understand what one means when one
says that a question can only belong to a micro-topic

--- a/app/assets/stylesheets/new-interface.css
+++ b/app/assets/stylesheets/new-interface.css
@@ -196,7 +196,7 @@ legend > a {
   margin-left : 17px ;
 } 
 
-#edit-syllabi-megaform .broad-topic > .heading { 
+#edit-syllabi-megaform .macro-topic > .heading { 
   font-variant : small-caps ;
   font-weight : bold ; 
   font-size : 14px ;
@@ -209,11 +209,11 @@ legend > a {
   border-radius : 2px ;
 } 
 
-#edit-syllabi-megaform .broad-topic { 
+#edit-syllabi-megaform .macro-topic { 
   margin-top : 5px ;
 } 
 
-#edit-syllabi-megaform .specific-topic { 
+#edit-syllabi-megaform .micro-topic { 
   min-height : 45px ;
   text-transform : lowercase ;
 } 
