--- a/app/views/layouts/admin.html.haml
+++ b/app/views/layouts/admin.html.haml
@@ -7,7 +7,7 @@
     = render :partial => 'yardsticks/edit'
     = render :partial => 'courses/new'
     = render :partial => 'courses/edit'
-    = render :partial => 'specific_topics/new'
+    = render :partial => 'micro_topics/new'
     = render :partial => 'teachers/new'
     = render :partial => 'students/new'
     = render :partial => 'study_groups/new'
@@ -16,7 +16,7 @@
     = render :partial => 'boards/controls'
     = render :partial => 'courses/controls'
     = render :partial => 'schools/controls'
-    = render :partial => 'specific_topics/controls'
+    = render :partial => 'micro_topics/controls'
     = render :partial => 'examiners/controls'
 
     = render :partial => 'schools/admin-view'
@@ -27,7 +27,7 @@
     = render :partial => 'study_groups/studentlist'
     = render :partial => 'study_groups/list'
     = render :partial => 'study_groups/radio_list'
-    = render :partial => 'specific_topics/list'
+    = render :partial => 'micro_topics/list'
   
     = render :partial => 'toolbox/radio_one_column'
     = render :partial => 'toolbox/checkbox_one_column'
