--- a/app/views/layouts/admin.html.haml
+++ b/app/views/layouts/admin.html.haml
@@ -27,7 +27,7 @@
     = render :partial => 'study_groups/studentlist'
     = render :partial => 'study_groups/list'
     = render :partial => 'study_groups/radio_list'
-    = render :partial => 'micro_topics/list'
+    = render :partial => 'macro_topics/list'
   
     = render :partial => 'toolbox/radio_one_column'
     = render :partial => 'toolbox/checkbox_one_column'
