--- a/app/views/macro_topics/_list.html.haml
+++ b/app/views/macro_topics/_list.html.haml
@@ -1,10 +1,10 @@
 
-#topic-list.sortable-containment
+#macro-topic-list
   %legend
     %span.target= "In"
     %span.operation= "Click to exclude | Select to Edit"
-  %ul#included-topics.data.sortable
+  %ul#in-macros.data.in-tray
   %legend
     %span.target= "Out"
     %span.operation= "Click to include" 
-  %ul#excluded-topics.data.sortable
+  %ul#out-macros.data.out-tray
