Added new element - checkbox-label-select - to the toolbox
(note to self) : Rename partials to suggest their structure

--- a/app/views/layouts/admin.html.haml
+++ b/app/views/layouts/admin.html.haml
@@ -28,10 +28,12 @@
     = render :partial => 'study_groups/list'
     = render :partial => 'study_groups/radio_list'
     = render :partial => 'macro_topics/list'
+    = render :partial => 'micro_topics/list'
   
     = render :partial => 'toolbox/radio_one_column'
     = render :partial => 'toolbox/checkbox_one_column'
     = render :partial => 'toolbox/line_item'
+    = render :partial => 'toolbox/cbox_label_select'
   
 !!!5
 
