--- a/app/views/admin/_top-panel.html.haml
+++ b/app/views/admin/_top-panel.html.haml
@@ -3,7 +3,7 @@
   = main_link :for => :schools, :with => {:panels => {:middle => "#new-student", :right => "#new-teacher"}} 
   = main_link :for => :examiners, :with => {:panels => {} }
 
-  = main_link :for => :courses, :with => {:panels => { :middle => '#macro-topic-list' },
+  = main_link :for => :courses, :with => {:panels => { :middle => '#macro-topic-list', :right => '#micro-topic-list' },
                                           :radio_urls => {:side => 'course/macro_coverage.json?id='} }
 
   = main_link :for => :yardsticks, :with => {:panels => {:middle => '#edit-yardstick'}, 
