Everything - cbox, label and select - laid out in one row

--- a/app/views/toolbox/_cbox_label_select.html.haml
+++ b/app/views/toolbox/_cbox_label_select.html.haml
@@ -1,5 +1,5 @@
 
 .toolbox.cbox-label-select.full-width
   %input.left{ :type => :checkbox, :class => :checkbox} 
-  .content
+  .content.left
   = drop_down_menu_for :difficulty, :float => :right, :disabled => true, :include_blank => false
