--- a/app/assets/stylesheets/new-interface.css
+++ b/app/assets/stylesheets/new-interface.css
@@ -23,10 +23,8 @@ fieldset.inputs li.boolean.input {
   width : 65% ;
 } 
 
-#side-panel, #right-panel { 
-} 
-
-#middle-panel, #wide-panel {
+.sortable { 
+  min-height : 30px ;
 } 
 
 .panel:not([class~="horizontal"]) {
