Yeah !! I flip-flopped on sortable-lists - as promised !!
First deployment for when one needs to show macro-topics during
syllabus-editing

--- a/app/views/macro_topics/_list.html.haml
+++ b/app/views/macro_topics/_list.html.haml
@@ -3,8 +3,8 @@
   %legend
     %span.target= "In"
     %span.operation= "Click to exclude | Select to Edit"
-  %ul#in-macros.data.in-tray
+  %ul#in-macros.data.in-tray.sortable
   %legend
     %span.target= "Out"
     %span.operation= "Click to include" 
-  %ul#out-macros.data.out-tray
+  %ul#out-macros.data.out-tray.sortable
