Minor changes to header labels

--- a/app/views/macro_topics/_list.html.haml
+++ b/app/views/macro_topics/_list.html.haml
@@ -1,10 +1,10 @@
 
 #macro-topic-list
   %legend
-    %span.target= "In"
-    %span.operation= "Click to exclude | Select to Edit"
+    %span.target= "in"
+    %span.operation= "drag-n-drop | select to edit" 
   %ul#in-macros.data.in-tray.sortable
   %legend
-    %span.target= "Out"
-    %span.operation= "Click to include" 
+    %span.target= "out"
+    %span.operation= "drag-n-drop" 
   %ul#out-macros.data.out-tray.sortable
