--- a/app/views/admin/_top-panel.html.haml
+++ b/app/views/admin/_top-panel.html.haml
@@ -4,7 +4,7 @@
   = main_link :for => :examiners, :with => {:panels => {} }
 
   = main_link :for => :courses, :with => {:panels => { :middle => '#macro-topic-list', :right => '#micro-topic-list' },
-                                          :radio_urls => {:side => 'course/macro_coverage.json?id='} }
+                                          :radio_urls => {:side => 'course/coverage.json?id='} }
 
   = main_link :for => :yardsticks, :with => {:panels => {:middle => '#edit-yardstick'}, 
                                              :radio_urls => {:side => 'yardstick.json?id='} }
