--- a/app/views/syllabi/_edit.html.haml
+++ b/app/views/syllabi/_edit.html.haml
@@ -1,43 +1,8 @@
 
--# This form lists out *all* micro topics, grouped by macro-topics
--# in *one* 2-column form. Each row in each column represents one 
--# micro topic in the following structure : 
--# 
--#  #syllabi-edit-megaform 
--#    <div class="label large left">Calculus</div>  
--#    <div marker=" {macro_topic_id} "> 
--#      <input type='checkbox'/> 
--#      <div class="label small left">Area under the Curve</div> 
--#      <select> 
--#        <option> 
--#      </select>
--# 
--# The form is rendered in virginal form initially - that is - with none of the
--# checkboxes checked and none of the drop-downs selected. Thereafter information
--# about the syllabi for the last selected course is loaded (via AJAX) and the
--# display updated
-
-
-- categories = MacroTopic.order(:name).all 
-
-#edit-syllabi-megaform.mega-form
-  = form_tag '/syllabus', :method => :put, :remote => true do |f| 
-    = submit_tag "Update"
-
-    #dump
-      - categories.each do |category| 
-        .macro-topic
-          .heading
-            .label.large.left.full-width= "#{category.name}"
-            = nofrills_checkbox :float => :right 
-
-          - topics = MicroTopic.where(:macro_topic_id => category.id).order(:name) 
-          - topics.each do |topic| 
-            .micro-topic{ :marker => "#{topic.id}" }
-              .heading
-                = nofrills_checkbox 
-                .label.small= "#{topic.name}"
-              = drop_down_menu_for :difficulty, :float => :right, :disabled => true,
-                                   :include_blank => false, :name => "syllabi[#{topic.id}]"
-    #first.column.left 
-    #second.column.left
+#edit-syllabi-form
+  %legend
+    %span.target= "specific topics"
+    %span.operation= "select difficulty levels and submit"
+  = form_tag '/syllabus', :method => :put, :remote => true do |f|
+    = submit_tag :update
+    .peek-a-boo
