Changed .data to .purgeable throughout ...
Thats how class="data" attribute was interpreted anyways. 'purgeable'
is just more descriptive and relevant

--- a/app/views/macro_topics/_list.html.haml
+++ b/app/views/macro_topics/_list.html.haml
@@ -3,8 +3,8 @@
   %legend
     %span.target= "in"
     %span.operation= "drag-n-drop | select to edit" 
-  %ul#in-macros.data.in-tray.sortable
+  %ul#in-macros.purgeable.in-tray.sortable
   %legend
     %span.target= "out"
     %span.operation= "drag-n-drop" 
-  %ul#out-macros.data.out-tray.sortable
+  %ul#out-macros.purgeable.out-tray.sortable
