--- a/app/views/yardsticks/_summary.html.haml
+++ b/app/views/yardsticks/_summary.html.haml
@@ -1,7 +1,7 @@
 
 #yardsticks-summary.selection.full-width.left{ :middle => '#edit-yardstick',
                                                :right => '#new-yardstick'}
-  .data
+  .purgeable
     #yardsticks-icon-table
       #insights.label.left= "Insights" 
       #formulation.label.left= "Formulation"
