--- a/app/views/study_groups/_list.html.haml
+++ b/app/views/study_groups/_list.html.haml
@@ -12,5 +12,5 @@
 #studygroups-list.multi-select.selection.full-width.left
   = form_tag teachers_update_roster_path, :method => :put, :remote => true do |f| 
     = submit_tag "Update"
-    .data.clear-before-show.empty-on-putback 
+    .purgeable.clear-before-show.empty-on-putback 
 
