Added 2 new tools to #toolbox
A checkbox with a label and a button
A radio-button with a label and a button

--- a/app/views/layouts/admin.html.haml
+++ b/app/views/layouts/admin.html.haml
@@ -33,6 +33,8 @@
     = render :partial => 'toolbox/checkbox_one_column'
     = render :partial => 'toolbox/line_item'
     = render :partial => 'toolbox/cbox_label_select'
+    = render :partial => 'toolbox/cbox_label_button'
+    = render :partial => 'toolbox/radio_label_button'
   
 !!!5
 
