Changed <div class="content"> in partials to <div class="label"> ..
.. because thats what it is used as

--- a/app/views/toolbox/_cbox_label_button.html.haml
+++ b/app/views/toolbox/_cbox_label_button.html.haml
@@ -1,5 +1,5 @@
 
 .toolbox.cbox-label-button.full-width
   %input.left{ :type => :checkbox, :class => :checkbox } 
-  .content.left
+  .label.left
   %input.right{ :type => :button }
