--- a/app/views/toolbox/_radio_label_button.html.haml
+++ b/app/views/toolbox/_radio_label_button.html.haml
@@ -1,5 +1,5 @@
 
 .toolbox.radio-label-button.full-width
   %input.left{ :type => :radio, :class => :radio }  
-  .content.left
+  .label.left
   %input.right{ :type => :button }
