--- a/app/views/toolbox/_radio_one_column.html.haml
+++ b/app/views/toolbox/_radio_one_column.html.haml
@@ -1,4 +1,4 @@
 
 .toolbox.radio-column.full-width
   %input{ :type => :radio, :class => 'radio left', 'checked' => '' }
-  .content.left
+  .label.left
