Define 'name' attribute for checkboxes and <select> during partial rendering ..
You kinda know everything you need to know because - most probably -
you are rendering the partial when iterating over DB records. So, might as
well use the DB record indices to generate names for the aobve 2 elements

--- a/app/views/toolbox/_the_god_element.html.haml
+++ b/app/views/toolbox/_the_god_element.html.haml
@@ -13,10 +13,10 @@
 
 .toolbox.god-element.full-width
   %input.left{ :type => :radio, :class => :radio, :marker => "#{marker}" }  
-  %input.left{ :type => :checkbox, :class => :checkbox, :marker => "#{marker}" }  
+  %input.left{ :type => :checkbox, :class => :checkbox, :marker => "#{marker}", :name => "checked[#{marker}]" }  
   .label.left= "#{label}"
   %input.right{ :type => :button }
-  %select.right.difficulty{ :name => :difficulty, :disabled => true}
+  %select.right.difficulty{ :name => "difficulty[#{marker}]", :disabled => true}
     %option{ :value => 1 }= "introductory"
     %option{ :value => 2 }= "intermediate"
     %option{ :value => 3 }= "advanced"
