--- a/app/views/toolbox/_the_god_element.html.haml
+++ b/app/views/toolbox/_the_god_element.html.haml
@@ -15,8 +15,8 @@
   %input.left{ :type => :radio, :class => :radio, :marker => "#{marker}" }  
   %input.left{ :type => :checkbox, :class => :checkbox, :marker => "#{marker}", :name => "checked[#{marker}]" }  
   .label.left= "#{label}"
-  %input.right{ :type => :button }
-  %select.right.difficulty{ :name => "difficulty[#{marker}]", :disabled => true}
+  %input.button.right{ :type => :button }
+  %select.right.difficulty.select{ :name => "difficulty[#{marker}]", :disabled => true}
     %option{ :value => 1 }= "introductory"
     %option{ :value => 2 }= "intermediate"
     %option{ :value => 3 }= "advanced"
