No need to get list of macro & micro topics via JSON ..
That is information that can be rendered once into the view
initially. Individual items can then be picked and moved around
the page as needed by JS

With this scheme, the JSON generated by - for example - course/coverage
also becomes simpler - and smaller

--- a/app/views/macro_topics/_list.html.haml
+++ b/app/views/macro_topics/_list.html.haml
@@ -3,8 +3,11 @@
   %legend
     %span.target= "in"
     %span.operation= "drag-n-drop | select to edit" 
-  %ul#in-macros.purgeable.in-tray.sortable
+  #in-macros.in-tray.sortable
   %legend
     %span.target= "out"
     %span.operation= "drag-n-drop" 
-  %ul#out-macros.purgeable.out-tray.sortable
+  #out-macros.out-tray.sortable
+    - list = get_list_of :macro_topics
+    - list.each do |item|
+      = render :partial => 'toolbox/the_god_element', :locals => { :marker => "#{item.id}", :label => "#{item.name}" }
