--- a/app/views/toolbox/_the_god_element.html.haml
+++ b/app/views/toolbox/_the_god_element.html.haml
@@ -12,10 +12,11 @@
 - label = label.blank? ? 'tbd' : label
 
 .toolbox.god-element.full-width
-  %input.left{ :type => :radio, :class => :radio, :marker => "#{marker}" }  
-  %input.left{ :type => :checkbox, :class => :checkbox, :marker => "#{marker}", :name => "checked[#{marker}]" }  
+  %input.left{ :type => :radio, :class => :radio, :marker => "#{marker}", :disabled => true }  
+  %input.left{ :type => :checkbox, :class => :checkbox, :disabled => true, 
+               :marker => "#{marker}", :name => "checked[#{marker}]" }  
   .label.left= "#{label}"
-  %input.button.right{ :type => :button }
+  %input.button.right{ :type => :button, :disabled => true }
   %select.right.difficulty.select{ :name => "difficulty[#{marker}]", :disabled => true}
     %option{ :value => 1 }= "introductory"
     %option{ :value => 2 }= "intermediate"
