Decompile list into a separate dump section ...
Let the in-tray and the out-tray be treated the same. Symmetry is
beautiful and symmterical behaviour is fair

--- a/app/views/macro_topics/_list.html.haml
+++ b/app/views/macro_topics/_list.html.haml
@@ -8,6 +8,7 @@
     %span.target= "out"
     %span.operation= "drag-n-drop" 
   #out-macros.out-tray.sortable
+  .dump.hidden
     - list = get_list_of :macro_topics
     - list.each do |item|
       = render :partial => 'toolbox/the_god_element', :locals => { :marker => "#{item.id}", :label => "#{item.name}" }
