--- a/app/views/layouts/admin.html.haml
+++ b/app/views/layouts/admin.html.haml
@@ -28,6 +28,7 @@
     = render :partial => 'study_groups/list'
     = render :partial => 'study_groups/radio_list'
     = render :partial => 'macro_topics/list'
+    = render :partial => 'micro_topics/list'
   
     = render :partial => 'toolbox/radio_one_column'
     = render :partial => 'toolbox/checkbox_one_column'
