Renamed god-element to swiss-knife ..
the god-element - a take on the god-particle, boson - is not
a good word for code-base. Swiss army knife is better known and more apt

--- a/app/assets/stylesheets/new-interface.css
+++ b/app/assets/stylesheets/new-interface.css
@@ -108,11 +108,11 @@ fieldset.inputs li.boolean.input {
   min-height : 20px ;
 } 
 
-.god-element { 
+.swiss-knife { 
   min-height : 30px ;
 } 
 
-.radio-column, .checkbox-column, .line-item, .cbox-label-select, .god-element { 
+.radio-column, .checkbox-column, .line-item, .cbox-label-select, .swiss-knife { 
   font-size : 13px ; 
   text-transform : lowercase ;
 } 
