--- a/app/views/toolbox/_swiss_knife.html.haml
+++ b/app/views/toolbox/_swiss_knife.html.haml
@@ -1,7 +1,6 @@
 
 -#
-  This is the God element - kinda like the God particle CERN researchers
-  are searching for. It has everything in it - radio-buttons, check-boxes, 
+  The structure below has everything in it - radio-buttons, check-boxes, 
   a label, <select> for difficulty etc.
   In cases where the list to display is already known, iterate over the DB
   records and render this element. Then, in JS, disable & hide the bits you don't want
@@ -11,7 +10,7 @@
 - marker = marker.blank? ? 'tbd' : marker
 - label = label.blank? ? 'tbd' : label
 
-.toolbox.god-element.full-width{ :marker => "#{marker}" }
+.toolbox.swiss-knife.full-width{ :marker => "#{marker}" }
   %input.left{ :type => :radio, :class => :radio, :marker => "#{marker}", :disabled => true }  
   %input.left{ :type => :checkbox, :class => :checkbox, :disabled => true, 
                :marker => "#{marker}", :name => "checked[#{marker}]" }  
