--- a/app/views/syllabi/_edit.html.haml
+++ b/app/views/syllabi/_edit.html.haml
@@ -5,4 +5,4 @@
     %span.operation= "select difficulty levels and submit"
   = form_tag '/syllabus', :method => :put, :remote => true do |f|
     = submit_tag :update
-    .peek-a-boo.purgeable
+    .peek-a-boo
