--- a/app/views/micro_topics/_list.html.haml
+++ b/app/views/micro_topics/_list.html.haml
@@ -2,7 +2,7 @@
 #micro-topic-list
   - list = get_list_of :macro_topics
   - list.each do |macro|
-    %div{ :marker => "#{macro.id}", 'back-to' => '#micro-topic-list' }
+    %div.hidden{ :marker => "#{macro.id}", 'back-to' => '#micro-topic-list' }
       - micros = MicroTopic.where(:macro_topic_id => macro.id).order(:name)
       - micros.each do |micro|
         = render :partial => 'toolbox/swiss_knife', 
