[Big Change] Use .swiss-knife throughout ...
Every other tool in the #toolbox has been removed

--- a/app/views/layouts/admin.html.haml
+++ b/app/views/layouts/admin.html.haml
@@ -30,12 +30,7 @@
     = render :partial => 'macro_topics/list'
     = render :partial => 'micro_topics/list'
   
-    = render :partial => 'toolbox/radio_one_column'
-    = render :partial => 'toolbox/checkbox_one_column'
-    = render :partial => 'toolbox/line_item'
-    = render :partial => 'toolbox/cbox_label_select'
-    = render :partial => 'toolbox/cbox_label_button'
-    = render :partial => 'toolbox/radio_label_button'
+    = render :partial => 'toolbox/swiss_knife'
   
 !!!5
 
