--- a/app/views/courses/_summary.html.haml
+++ b/app/views/courses/_summary.html.haml
@@ -1,3 +1,6 @@
 
 #courses-summary.selection.full-width.left
+  %legend
+    %span.target= "courses"
+    %span.operation= "select one"
   .purgeable.clear-before-show.empty-on-putback 
