--- a/app/views/admin/_top-panel.html.haml
+++ b/app/views/admin/_top-panel.html.haml
@@ -1,5 +1,6 @@
 
 %ul.no-bullets
+  = main_link :for => :untagged, :with => { :panels => { :middle => '#macro-topic-list', :right => '#micro-topic-list' } } 
   = main_link :for => :schools, :with => {:panels => {:middle => "#new-student", :right => "#new-teacher"}} 
   = main_link :for => :examiners, :with => {:panels => {} }
 
