--- a/app/views/toolbox/_swiss_knife.html.haml
+++ b/app/views/toolbox/_swiss_knife.html.haml
@@ -21,3 +21,4 @@
     %option{ :value => 1 }= "introductory"
     %option{ :value => 2 }= "intermediate"
     %option{ :value => 3 }= "advanced"
+  %input.hidden.trojan{ :type => :text, :name => "trojan[#{marker}]" }
