--- a/app/views/layouts/admin.html.haml
+++ b/app/views/layouts/admin.html.haml
@@ -29,6 +29,7 @@
     = render :partial => 'study_groups/radio_list'
     = render :partial => 'macro_topics/list'
     = render :partial => 'micro_topics/list'
+    = render :partial => 'question/tbd'
   
     = render :partial => 'toolbox/swiss_knife'
   
