Minor addition to comment block

--- a/app/views/toolbox/_samurai_sword.html.haml
+++ b/app/views/toolbox/_samurai_sword.html.haml
@@ -10,6 +10,9 @@
   all customization has to be done, therefore, in JS. This element
   makes no assumptions about the context its being used in
 
+  One more thing : the samurai-sword is rendered as a jQuery accordion.
+  So, you sheath and un-sheath a samurai-sword
+
 - marker = marker.blank? ? 'tbd' : marker
 - label = label.blank? ? 'tbd' : label
 
