Added <label> to check-boxes and select

--- a/app/views/toolbox/_samurai_sword.html.haml
+++ b/app/views/toolbox/_samurai_sword.html.haml
@@ -20,12 +20,22 @@
   .label.accordion-heading
   .accordion-content
     .checkbox-row
-      %input.left.checkbox{ :type => :checkbox, :marker => "#{marker}", :disabled => true }
-      %input.left.checkbox{ :type => :checkbox, :marker => "#{marker}", :disabled => true }
-      %input.left.checkbox{ :type => :checkbox, :marker => "#{marker}", :disabled => true }
+      .checkbox
+        %label
+        %input.left{ :type => :checkbox, :marker => "#{marker}", :disabled => true }
+      .checkbox
+        %label
+        %input.left{ :type => :checkbox, :marker => "#{marker}", :disabled => true }
+      .checkbox
+        %label
+        %input.left{ :type => :checkbox, :marker => "#{marker}", :disabled => true }
     .select-row
-      %select.select.left{ :disabled => true }
-      %select.select.left{ :disabled => true }
+      .select
+        %label
+        %select.left{ :disabled => true }
+      .select
+        %label
+        %select.left{ :disabled => true }
     .button-row
       %input.button.left{ :type => :button, :disabled => true }
       %input.button.left{ :type => :button, :disabled => true }
