Added samurai-sword to #toolbox

--- a/app/views/layouts/admin.html.haml
+++ b/app/views/layouts/admin.html.haml
@@ -32,6 +32,7 @@
     = render :partial => 'question/tbd'
   
     = render :partial => 'toolbox/swiss_knife'
+    = render :partial => 'toolbox/samurai_sword'
   
 !!!5
 
