--- a/app/views/question/_tbd.html.haml
+++ b/app/views/question/_tbd.html.haml
@@ -3,4 +3,4 @@
   %legend
     %span.target= "un-tagged questions"
     %span.operation= "select, then tag" 
-  .purgeable.clear-before-show.empty-on-putback 
+  .samurai-armory.purgeable.clear-before-show
