Float the second button in button-row to the right

--- a/app/views/toolbox/_samurai_sword.html.haml
+++ b/app/views/toolbox/_samurai_sword.html.haml
@@ -38,4 +38,4 @@
         %select.left{ :disabled => true }
     .button-row.full-width
       %input.button.left.hidden{ :type => :button, :disabled => true }
-      %input.button.left.hidden{ :type => :button, :disabled => true }
+      %input.button.right.hidden{ :type => :button, :disabled => true }
