margin space below submit buttons in .panels (except control-panel)

--- a/app/assets/stylesheets/new-interface.css
+++ b/app/assets/stylesheets/new-interface.css
@@ -58,6 +58,10 @@ fieldset.inputs li.boolean.input {
   color : #fd9105 ;
 } 
 
+.panel:not([id="control-panel"]) form input[type="submit"] {
+  margin-bottom : 15px ;
+}
+
 #control-panel { 
   padding-top : 20px ;
   height : 100px ;
