--- a/app/views/study_groups/_list.html.haml
+++ b/app/views/study_groups/_list.html.haml
@@ -10,6 +10,9 @@
 -# going to be a form submission, we first make the form
 
 #studygroups-list.multi-select.selection.full-width.left
+  %legend
+    %span.target= "roster"
+    %span.operation= "select sections"
   = form_tag teachers_update_roster_path, :method => :put, :remote => true do |f| 
     = submit_tag "Update"
     .purgeable.clear-before-show.empty-on-putback 
