Sharpened logic for what should happen when clearing panels ..
When clearing panels, only one of the following 4 can be done to
the elements within the said panel :
  1. the element's internals can be purged
  2. the element can be moved back to #toolbox
  3. both (1) and (2)
  4. neither (1) nor (2)

These 4 possibilities can be captured using just 2 class attributes -
purgeable and put-back. The former has been around for some time
while the latter is being introduced in this commit

--- a/app/views/micro_topics/_list.html.haml
+++ b/app/views/micro_topics/_list.html.haml
@@ -1,5 +1,5 @@
 
-#micro-topic-list
+#micro-topic-list.put-back
   - list = get_list_of :macro_topics
   - list.each do |macro|
     %div.hidden{ :marker => "#{macro.id}", 'back-to' => '#micro-topic-list' }
